config/staging-server/deploymentconfig-slowers-frontend.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"slowers-backend"}]'
    app.openshift.io/route-disabled: 'false'
    openshift.io/generated-by: OpenShiftWebConsole
  resourceVersion: '1600959505'
  name: slowers-frontend
  uid: 54dc386e-e235-44b2-90e4-80ffc9238514
  creationTimestamp: '2024-09-23T10:37:58Z'
  generation: 65
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2024-11-22T09:22:58Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/connects-to': {}
            'f:app.openshift.io/route-disabled': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-namespace': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:strategy':
            'f:activeDeadlineSeconds': {}
            'f:rollingParams':
              .: {}
              'f:intervalSeconds': {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
              'f:timeoutSeconds': {}
              'f:updatePeriodSeconds': {}
            'f:type': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"slowers-frontend"}':
                  .: {}
                  'f:env':
                    .: {}
                    'k:{"name":"BACKEND_URL"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":5173,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:memory': {}
                    'f:requests':
                      .: {}
                      'f:memory': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2024-12-08T11:46:00Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"slowers-frontend"}':
                  'f:image': {}
          'f:triggers': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2024-12-08T11:46:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:updatedReplicas': {}
          'f:readyReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:details':
            .: {}
            'f:causes': {}
            'f:message': {}
          'f:replicas': {}
          'f:availableReplicas': {}
          'f:observedGeneration': {}
          'f:unavailableReplicas': {}
          'f:latestVersion': {}
      subresource: status
  namespace: ohtuprojekti-staging
  labels:
    app: slowers-frontend
    app.kubernetes.io/component: slowers-frontend
    app.kubernetes.io/instance: slowers-frontend
    app.kubernetes.io/name: slowers-frontend
    app.kubernetes.io/part-of: Slowers-App
    app.openshift.io/runtime: react
    app.openshift.io/runtime-namespace: ohtuprojekti-staging
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - slowers-frontend
        from:
          kind: ImageStreamTag
          namespace: ohtuprojekti-staging
          name: 'slowers-frontend:latest'
        lastTriggeredImage: 'image-registry.openshift-image-registry.svc:5000/ohtuprojekti-staging/slowers-frontend@sha256:4aceed7c58e15849344189cb1e78993315d63d627b4d17ca69655b184c7bac22'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: slowers-frontend
    deploymentconfig: slowers-frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: slowers-frontend
        deploymentconfig: slowers-frontend
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: slowers-frontend
          image: 'image-registry.openshift-image-registry.svc:5000/ohtuprojekti-staging/slowers-frontend@sha256:4aceed7c58e15849344189cb1e78993315d63d627b4d17ca69655b184c7bac22'
          ports:
            - containerPort: 5173
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 80Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 65
  details:
    message: image change
    causes:
      - type: ImageChange
        imageTrigger:
          from:
            kind: DockerImage
            name: 'image-registry.openshift-image-registry.svc:5000/ohtuprojekti-staging/slowers-frontend@sha256:4aceed7c58e15849344189cb1e78993315d63d627b4d17ca69655b184c7bac22'
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 60
  updatedReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-11-22T09:09:12Z'
      lastTransitionTime: '2024-11-22T09:09:12Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-12-08T11:46:26Z'
      lastTransitionTime: '2024-12-08T11:46:21Z'
      reason: NewReplicationControllerAvailable
      message: replication controller "slowers-frontend-60" successfully rolled out
  replicas: 1
  readyReplicas: 1
