config/staging-server/service-slowers-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: slowers-app
  namespace: ohtuprojekti-staging
  uid: f9c57c54-432e-495e-b26d-5ebc1860db88
  resourceVersion: '1696844444'
  creationTimestamp: '2025-03-13T08:25:57Z'
  labels:
    app: slowers-app
    app.kubernetes.io/component: slowers-app
    app.kubernetes.io/instance: slowers-app
    app.kubernetes.io/name: slowers-app
    app.kubernetes.io/part-of: Slowers-App
    app.openshift.io/runtime-version: latest
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"slowers-mongo"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2025-03-13T08:26:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/connects-to': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":5001,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.55.70
  ipFamilies:
    - IPv4
  ports:
    - name: 5001-tcp
      protocol: TCP
      port: 5001
      targetPort: 5001
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.55.70
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: slowers-app
    deployment: slowers-app
status:
  loadBalancer: {}
