config/staging-server/service-slowers-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: slowers-backend
  namespace: ohtuprojekti-staging
  uid: f6f2b2d3-b488-43a7-bce1-bbbfc00edf29
  resourceVersion: '1423018163'
  creationTimestamp: '2024-09-23T10:31:48Z'
  labels:
    app: slowers-backend
    app.kubernetes.io/component: slowers-backend
    app.kubernetes.io/instance: slowers-backend
    app.kubernetes.io/name: slowers-backend
    app.kubernetes.io/part-of: Slowers-App
    app.openshift.io/runtime-version: latest
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"slowers-mongo"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2024-09-23T10:32:31Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/connects-to': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":5001,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.136.218
  ipFamilies:
    - IPv4
  ports:
    - name: 5001-tcp
      protocol: TCP
      port: 5001
      targetPort: 5001
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.136.218
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: slowers-backend
    deploymentconfig: slowers-backend
status:
  loadBalancer: {}
