config/staging-server/route-slowers-app.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: slowers-app
  namespace: ohtuprojekti-staging
  uid: 0c8346e3-89b1-4611-a1a8-e7ee363e3b37
  resourceVersion: '1696844445'
  creationTimestamp: '2025-03-13T08:25:57Z'
  labels:
    app: slowers-app
    app.kubernetes.io/component: slowers-app
    app.kubernetes.io/instance: slowers-app
    app.kubernetes.io/name: slowers-app
    app.kubernetes.io/part-of: Slowers-App
    app.openshift.io/runtime-version: latest
    type: external
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"slowers-mongo"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-03-13T08:25:57Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-03-13T08:26:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/connects-to': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
            'f:type': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: slowers-app.ext.ocp-test-0.k8s.it.helsinki.fi
  to:
    kind: Service
    name: slowers-app
    weight: 100
  port:
    targetPort: 5001-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: slowers-app.ext.ocp-test-0.k8s.it.helsinki.fi
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-03-13T08:25:57Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.ocp-test-0.k8s.it.helsinki.fi
    - host: slowers-app.ext.ocp-test-0.k8s.it.helsinki.fi
      routerName: external
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-03-13T08:25:57Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-external.ext.ocp-test-0.k8s.it.helsinki.fi
